--- a/SaintSender.Core/SaintSender.Core.csproj
+++ b/SaintSender.Core/SaintSender.Core.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Credentials.cs" />
+    <Compile Include="Models\Email.cs" />
     <Compile Include="Services\EmailService.cs" />
     <Compile Include="Services\GreetService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
