--- a/SaintSender.Core.Tests/SaintSender.Core.Tests.csproj
+++ b/SaintSender.Core.Tests/SaintSender.Core.Tests.csproj
@@ -66,7 +66,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GreetServiceTests.cs" />
+    <Compile Include="MainWindowViewModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -75,6 +77,10 @@
     <ProjectReference Include="..\SaintSender.Core\SaintSender.Core.csproj">
       <Project>{bb60aa70-e219-40fd-a048-061a618f809d}</Project>
       <Name>SaintSender.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SaintSender.DesktopUI\SaintSender.DesktopUI.csproj">
+      <Project>{DBFBE048-8622-4E9D-9C58-47F6CD128972}</Project>
+      <Name>SaintSender.DesktopUI</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
